fixed category description alignment

--- a/res/css/main.css
+++ b/res/css/main.css
@@ -194,6 +194,8 @@ body > .sectionTransition {
     margin: 0;
     color: #868686 !important;
     text-shadow: 0 0 0.3em #000;
+	margin: 0 auto;
+    width: 100%;
 }
 
 .tileButton:hover p {
